[metadata]
name = xv
version = 0.0.6
url = https://github.com/thorwhalen/xv
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Access to arxiv data
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = xv

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
 	config2py
  	graze

